# skills

./: .gitignore  README.md  skills.sln
.github/workflows/: publish.yml
cli/docx/: Comparer.cs  Inspector.cs  Models.cs  Program.cs  README.md  TemplateTransformValidator.cs  Transforms.cs  docx.csproj
cli/pdf/: README.md  pyproject.toml
cli/pdf/dockit_pdf/: __init__.py
cli/pdf/tiwater_pdf/: __init__.py  cli.py
cli/xlsx/: Extractor.cs  Inspector.cs  Models.cs  Program.cs  README.md  TemplateFiller.cs  xlsx.csproj
skills/coding-agent/: SKILL.md
skills/docx/: SKILL.md
skills/docx/references/: inspection.md  openxml_rules.md  transformation.md
skills/docx/scripts/: docx_inspect.py  docx_preview.sh  env_check.sh
skills/docx/scripts/dotnet/DocxOps/: DocxOps.csproj  Program.cs
skills/pdf/: SKILL.md
skills/render/: SKILL.md
skills/render/scripts/: render.py
skills/ux-design/: SKILL.md
