[project]
name = "tiwater-pdf"
version = "0.1.1"
description = "PDF inspection and table extraction CLI"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "openai",
]

[project.scripts]
tiwater-pdf = "tiwater_pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
